--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,14 +17,14 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
-  say-ge:
+  print-env-var:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
       - run:
           name: "Say GE"
-          command: "echo Good Evening"
+          command: echo $env_var_name
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -32,6 +32,6 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
-      - say-ge:
+      - print-env-var:
           requires:
             - say-hello
