--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Say GE"
-          command: echo $env_var_name
+          name: "Print Env Var"
+          command: "echo $env_var_name"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
